no more place holders

--- a/index.html
+++ b/index.html
@@ -107,10 +107,13 @@
           <div class="section-title">
             <h2>About</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Hi, my name is Shao Yang. As an eager learner, I hope to expand my
+              knowledge especially in the field of Math and Science. I enjoy
+              learning about the newest technology and I do my best to be
+              up-to-date with the latests developments, be it Artificial
+              Inteligence, robotics, or anything in between. I am innovative and
+              can come up with effective solutions to address new problems that
+              may arise.
             </p>
           </div>
 
@@ -121,8 +124,7 @@
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
               <h3>Profile</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Currently, I'm a secondary 4 student in Fuhua Secondary School.
               </p>
               <div class="row">
                 <div class="col-lg-6">
@@ -151,13 +153,13 @@
                 </div>
               </div>
               <p>
-                Officiis eligendi itaque labore et dolorum mollitia officiis
-                optio vero. Quisquam sunt adipisci omnis et ut. Nulla
-                accusantium dolor incidunt officia tempore. Et eius omnis.
-                Cupiditate ut dicta maxime officiis quidem quia. Sed et
-                consectetur qui quia repellendus itaque neque. Aliquid amet
-                quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis
-                culpa magni laudantium dolores.
+                In my free time, I enjoy doing several activites such as
+                programming, gaming with friends as well as listening to music.
+                My passion for programming and creating useful tools prompted me
+                to join the Robotics Club CCA in Secondary School. There, I was
+                able to continue to develop this interest and I was also able to
+                take up various leadership positions, most notably, CCA
+                vice-chairperson.
               </p>
             </div>
           </div>
@@ -171,10 +173,9 @@
           <div class="section-title">
             <h2>Skills</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Throughout my years in secondary school, I have been slowly
+              refining my computing skills through working on projects for
+              competitions.
             </p>
           </div>
 
@@ -271,10 +272,10 @@
           <div class="section-title">
             <h2>Achievements</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              To me, my secondary school years had been very fruitful as I was
+              given many opportunities to compete in various competitions. Such
+              experiences are invaluable and I was able to learn and improve on
+              my weakness each time.
             </p>
           </div>
 
@@ -400,10 +401,8 @@
           <div class="section-title">
             <h2>Portfolio</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Lastly, here are some notable projects which I have contributed to
+              in the last few years.
             </p>
           </div>
 
