--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               knowledge especially in the field of Math and Science. I enjoy
               learning about the newest technology and I do my best to be
               up-to-date with the latests developments, be it Artificial
-              Inteligence, robotics, or anything in between. I am innovative and
+              Intelligence, robotics, or anything in between. I am innovative and
               can come up with effective solutions to address new problems that
               may arise.
             </p>
