changed ordering of achievements

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
               knowledge especially in the field of Math and Science. I enjoy
               learning about the newest technology and I do my best to be
               up-to-date with the latests developments, be it Artificial
-              Intelligence, robotics, or anything in between. I am innovative and
-              can come up with effective solutions to address new problems that
-              may arise.
+              Intelligence, robotics, or anything in between. I am innovative
+              and can come up with effective solutions to address new problems
+              that may arise.
             </p>
           </div>
 
@@ -338,21 +338,13 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="achievements-title">Science / Math</h3>
               <div class="achievements-item">
-                <h4>42nd International CB Paul Science Quiz</h4>
-                <h5>2021</h5>
-                <p>
-                  <em
-                    >Science / Math competition. Competed in Preliminary Round
-                    (Individual)
-                  </em>
-                </p>
-                <li>Silver Award</li>
-              </div>
-              <div class="achievements-item">
-                <h4>Singapore Mathematical Olympiad</h4>
-                <h5>2021</h5>
-                <p><em>Competed in junior section</em></p>
-                <li>Silver Award</li>
+                <h4>44th International CB Paul Science Quiz</h4>
+                <h5>2023</h5>
+                <p><em>Competed in both Preliminary and Final rounds</em></p>
+                <ul>
+                  <li>Individual Gold Award</li>
+                  <li>3rd Place Team</li>
+                </ul>
               </div>
               <div class="achievements-item">
                 <h4>
@@ -381,13 +373,21 @@
                 <li>Bronze Award</li>
               </div>
               <div class="achievements-item">
-                <h4>44th International CB Paul Science Quiz</h4>
-                <h5>2023</h5>
-                <p><em>Competed in both Preliminary and Final rounds</em></p>
-                <ul>
-                  <li>Individual Gold Award</li>
-                  <li>3rd Place Team</li>
-                </ul>
+                <h4>42nd International CB Paul Science Quiz</h4>
+                <h5>2021</h5>
+                <p>
+                  <em
+                    >Science / Math competition. Competed in Preliminary Round
+                    (Individual)
+                  </em>
+                </p>
+                <li>Silver Award</li>
+              </div>
+              <div class="achievements-item">
+                <h4>Singapore Mathematical Olympiad</h4>
+                <h5>2021</h5>
+                <p><em>Competed in junior section</em></p>
+                <li>Silver Award</li>
               </div>
             </div>
           </div>
@@ -402,7 +402,7 @@
             <h2>Portfolio</h2>
             <p>
               Lastly, here are some notable projects which I have contributed to
-              in the last few years.
+              recently.
             </p>
           </div>
 
