--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       class="d-flex flex-column justify-content-center align-items-center"
     >
       <div class="hero-container mt-5 pt-5" data-aos="fade-in">
-        <h1>Chai Shao Yang</h1>
+        <h1>Shao Yang</h1>
         <p>
           I'm
           <span
@@ -538,6 +538,12 @@
     </main>
     <!-- End #main -->
 
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+      <div class="container">
+        <div class="copyright">Made by Shao Yang</div>
+      </div>
+    </footer><!-- End  Footer -->
     <a
       href="#"
       class="back-to-top d-flex align-items-center justify-content-center"
