--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>SYChai271@github.io</span>
+                      <strong>Website:</strong> <span>SYChai271.github.io</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
