--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Photoshop <i class="val">55%</i></span>
+                <span class="skill">Git <i class="val">55%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
