--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
           />
           <h1 class="text-light"><a href="index.html">Chai Shao Yang</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="https://twitter.com/SYChai271" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.facebook.com/SYChai271/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.instagram.com/sy.chai_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="https://github.com/SYChai271" target="_blank" class="github"><i class='bx bxl-github'></i></a>
           </div>
         </div>
 
@@ -93,7 +94,7 @@
       <div class="hero-container mt-5 pt-5" data-aos="fade-in">
         <h1>Shao Yang</h1>
         <p>
-          I'm
+          I'm a
           <span
             class="typed"
             data-typed-items="Student, Developer, Learner"
@@ -440,7 +441,7 @@
                     title="App 1"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://github.com/SYChai271/chess" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -462,7 +463,7 @@
                     title="Web 3"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://github.com/SYChai271/avisfashion" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -484,7 +485,7 @@
                     title="robotics 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://github.com/SYChai271/sy-wro2021" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -506,7 +507,7 @@
                     title="Web 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://github.com/SYChai271/30by30" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -528,7 +529,7 @@
                     title="robotics 1"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://github.com/SYChai271/sy-wro2022" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
