made links open in new tab

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                     title="App 1"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/chess" title="More Details"
+                  <a href="https://github.com/SYChai271/chess" target="_blank" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -463,7 +463,7 @@
                     title="Web 3"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/avisfashion" title="More Details"
+                  <a href="https://github.com/SYChai271/avisfashion" target="_blank" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -485,7 +485,7 @@
                     title="robotics 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/sy-wro2021" title="More Details"
+                  <a href="https://github.com/SYChai271/sy-wro2021" target="_blank" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -507,7 +507,7 @@
                     title="Web 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/30by30" title="More Details"
+                  <a href="https://github.com/SYChai271/30by30" target="_blank" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -529,7 +529,7 @@
                     title="robotics 1"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/sy-wro2022" title="More Details"
+                  <a href="https://github.com/SYChai271/sy-wro2022" target="_blank" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
