--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               Hi, my name is Shao Yang. As an eager learner, I hope to expand my
               knowledge especially in the field of Math and Science. I enjoy
               learning about the newest technology and I do my best to be
-              up-to-date with the latests developments, be it Artificial
+              up-to-date with the latest developments, be it Artificial
               Intelligence, robotics, or anything in between. I am innovative
               and can come up with effective solutions to address new problems
               that may arise.
@@ -157,13 +157,13 @@
                 </div>
               </div>
               <p>
-                In my free time, I enjoy doing several activites such as
+                In my free time, I enjoy doing several activities such as
                 programming, gaming with friends as well as listening to music.
                 My passion for programming and creating useful tools prompted me
-                to join the Robotics Club CCA in Secondary School. There, I was
+                to join the Robotics Club CCA in secondary school. There, I was
                 able to continue to develop this interest and I was also able to
                 take up various leadership positions, most notably, CCA
-                vice-chairperson.
+                Vice-Chairperson.
               </p>
             </div>
           </div>
@@ -316,7 +316,7 @@
                     Our idea was to create a game to gamify home gardening to
                     encourage more people to partake in this activity. In the
                     process, users will gain credits which can be used to
-                    support local produce. This in turn boosts local food
+                    support local produce. This in turn boosts the local food
                     industry which is a step closer to reaching the 30 by 30
                     goal.</em
                   >
@@ -358,7 +358,7 @@
                 <h5>2022</h5>
                 <p>
                   <em
-                    >Innovated on solutions to reduce environemntal implications
+                    >Innovated on solutions to reduce environmental implications
                     of fast fashion</em
                   >
                 </p>
