--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-    <link href="assets/img/icon.png" rel="icon">
-    <link href="assets/img/icon.png" rel="apple-touch-icon">
+    <link href="assets/img/icon.png" rel="icon" />
+    <link href="assets/img/icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
-    />  
+    />
 
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
     <link
@@ -42,22 +42,42 @@
     <!-- ======= Header ======= -->
     <header id="header">
       <div class="d-flex flex-column">
-        <div class="profile">
+        <div class="profile d-block d-md-none">
           <img
             src="assets/img/profile-img.png"
             alt=""
-            class="img-fluid rounded-circle"
+            class="img-fluid rounded-circle d-block d-md-none"
           />
           <h1 class="text-light"><a href="index.html">Chai Shao Yang</a></h1>
-          <div class="social-links mt-3 text-center">
-            <a href="https://twitter.com/SYChai271" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="https://www.facebook.com/SYChai271/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="https://www.instagram.com/sy.chai_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="https://github.com/SYChai271" target="_blank" class="github"><i class='bx bxl-github'></i></a>
+          <div class="social-links mt-3 text-center d-block d-md-none">
+            <a
+              href="https://twitter.com/SYChai271"
+              target="_blank"
+              class="twitter"
+              ><i class="bx bxl-twitter"></i
+            ></a>
+            <a
+              href="https://www.facebook.com/SYChai271/"
+              target="_blank"
+              class="facebook"
+              ><i class="bx bxl-facebook"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/sy.chai_/"
+              target="_blank"
+              class="instagram"
+              ><i class="bx bxl-instagram"></i
+            ></a>
+            <a
+              href="https://github.com/SYChai271"
+              target="_blank"
+              class="github"
+              ><i class="bx bxl-github"></i
+            ></a>
           </div>
         </div>
 
-        <nav id="navbar" class="nav-menu navbar">
+        <nav id="navbar" class="nav-menu navbar d-block d-md-none">
           <ul>
             <li>
               <a href="#hero" class="nav-link scrollto active"
@@ -80,6 +100,39 @@
               >
             </li>
           </ul>
+        </nav>
+        <nav
+          class="navbar navbar-expand-lg navbar-dark fixed-top p-3 d-none d-md-block navbar-custom"
+        >
+          <div class="container">
+            <a href="#" class="navbar-brand">Chai Shao Yang</a>
+
+            <div class="collapse navbar-collapse" id="navmenu">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item active">
+                  <a href="#hero" class="nav-link scrollto"
+                    ><i class="bx bx-home"></i> <span>Home</span></a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a href="#about" class="nav-link scrollto"
+                    ><i class="bx bx-user"></i> <span>About</span></a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a href="#achievements" class="nav-link scrollto"
+                    ><i class="bx bx-trophy"></i> <span>Achievements</span></a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a href="#portfolio" class="nav-link scrollto"
+                    ><i class="bx bx-book-content"></i>
+                    <span>Portfolio</span></a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
         <!-- .nav-menu -->
       </div>
@@ -441,7 +494,10 @@
                     title="App 1"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/chess" target="_blank" title="More Details"
+                  <a
+                    href="https://github.com/SYChai271/chess"
+                    target="_blank"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -463,7 +519,10 @@
                     title="Web 3"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/avisfashion" target="_blank" title="More Details"
+                  <a
+                    href="https://github.com/SYChai271/avisfashion"
+                    target="_blank"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -485,7 +544,10 @@
                     title="robotics 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/sy-wro2021" target="_blank" title="More Details"
+                  <a
+                    href="https://github.com/SYChai271/sy-wro2021"
+                    target="_blank"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -507,7 +569,10 @@
                     title="Web 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/30by30" target="_blank" title="More Details"
+                  <a
+                    href="https://github.com/SYChai271/30by30"
+                    target="_blank"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -529,7 +594,10 @@
                     title="robotics 1"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/sy-wro2022" target="_blank" title="More Details"
+                  <a
+                    href="https://github.com/SYChai271/sy-wro2022"
+                    target="_blank"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -547,7 +615,8 @@
       <div class="container">
         <div class="copyright">Made by Shao Yang</div>
       </div>
-    </footer><!-- End  Footer -->
+    </footer>
+    <!-- End  Footer -->
     <a
       href="#"
       class="back-to-top d-flex align-items-center justify-content-center"
