more or less done

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     <!-- ======= Header ======= -->
     <header id="header">
       <div class="d-flex flex-column">
-        <div class="profile d-block d-md-none">
+        <div class="profile d-block d-lg-none">
           <img
             src="assets/img/profile-img.png"
             alt=""
-            class="img-fluid rounded-circle d-block d-md-none"
+            class="img-fluid rounded-circle d-block d-lg-none"
           />
           <h1 class="text-light"><a href="index.html">Chai Shao Yang</a></h1>
-          <div class="social-links mt-3 text-center d-block d-md-none">
+          <div class="social-links mt-3 text-center d-block d-lg-none">
             <a
               href="https://twitter.com/SYChai271"
               target="_blank"
@@ -77,7 +77,7 @@
           </div>
         </div>
 
-        <nav id="navbar" class="nav-menu navbar d-block d-md-none">
+        <nav id="navbar" class="nav-menu navbar d-block d-lg-none">
           <ul>
             <li>
               <a href="#hero" class="nav-link scrollto active"
@@ -102,10 +102,10 @@
           </ul>
         </nav>
         <nav
-          class="navbar navbar-expand-lg navbar-dark fixed-top p-3 d-none d-md-block navbar-custom"
+          class="navbar navbar-expand-lg navbar-dark fixed-top p-3 d-none d-lg-block navbar-custom"
         >
           <div class="container">
-            <a href="#" class="navbar-brand">Chai Shao Yang</a>
+            <a href="index.html" class="navbar-brand">Chai Shao Yang</a>
 
             <div class="collapse navbar-collapse" id="navmenu">
               <ul class="navbar-nav ms-auto">
@@ -614,6 +614,32 @@
     <footer id="footer">
       <div class="container">
         <div class="copyright">Made by Shao Yang</div>
+        <div class="social-links mt-3 text-center d-none d-lg-block">
+          <a
+            href="https://twitter.com/SYChai271"
+            target="_blank"
+            class="twitter"
+            ><i class="bx bxl-twitter"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/SYChai271/"
+            target="_blank"
+            class="facebook"
+            ><i class="bx bxl-facebook"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/sy.chai_/"
+            target="_blank"
+            class="instagram"
+            ><i class="bx bxl-instagram"></i
+          ></a>
+          <a
+            href="https://github.com/SYChai271"
+            target="_blank"
+            class="github"
+            ><i class="bx bxl-github"></i
+          ></a>
+        </div>
       </div>
     </footer>
     <!-- End  Footer -->
