--- a/index.html
+++ b/index.html
@@ -103,14 +103,15 @@
         </nav>
         <nav
           class="navbar navbar-expand-lg navbar-dark fixed-top p-3 d-none d-lg-block navbar-custom"
+          id="navbar"
         >
           <div class="container">
             <a href="index.html" class="navbar-brand">Chai Shao Yang</a>
 
             <div class="collapse navbar-collapse" id="navmenu">
               <ul class="navbar-nav ms-auto">
-                <li class="nav-item active">
-                  <a href="#hero" class="nav-link scrollto"
+                <li class="nav-item">
+                  <a href="#hero" class="nav-link scrollto active"
                     ><i class="bx bx-home"></i> <span>Home</span></a
                   >
                 </li>
@@ -633,10 +634,7 @@
             class="instagram"
             ><i class="bx bxl-instagram"></i
           ></a>
-          <a
-            href="https://github.com/SYChai271"
-            target="_blank"
-            class="github"
+          <a href="https://github.com/SYChai271" target="_blank" class="github"
             ><i class="bx bxl-github"></i
           ></a>
         </div>
