--- a/index.html
+++ b/index.html
@@ -237,85 +237,37 @@
             </p>
           </div>
 
-          <div class="row skills-content">
-            <div class="col-lg-6" data-aos="fade-up">
-              <div class="progress">
-                <span class="skill">HTML <i class="val">80%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="80"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">CSS <i class="val">60%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="60"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">JavaScript <i class="val">75%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="75"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
+          <div class="d-sm-flex align-items-center justify-content-center">
+            <div class="col-lg-6 me-auto" id="icon" data-aos="fade-up">
+              <img src="assets/img/icons/undraw_firmware_re_fgdy (1).svg" class="img-fluid d-none d-lg-block" id="icon" alt="">
             </div>
-
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <div class="progress">
-                <span class="skill">Python <i class="val">100%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="100"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
+            <div class="d-flex flex-column align-items-center text-center">
+              <div class="d-flex flex-row" data-aos="fade-up">
+                <div class="p-2">
+                  <h6 id="type">Python</h6>
+                  <img src="assets/img/icons/python-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
+                </div>
+                <div class="p-2">
+                  <h6 id="type">Robotics</h6>
+                  <img src="assets/img/icons/robots-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
+                </div>
+                <div class="p-2">
+                  <h6 id="type">Git</h6>
+                  <img src="assets/img/icons/git-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
                 </div>
               </div>
-
-              <div class="progress">
-                <span class="skill">Robotics <i class="val">90%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="90"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
+              <div class="d-flex flex-row" data-aos="fade-up">
+                <div class="p-2">
+                  <h6 id="type">HTML</h6>
+                  <img src="assets/img/icons/html-5-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
                 </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">Git <i class="val">55%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="55"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
+                <div class="p-2">
+                  <h6 id="type">CSS</h6>
+                  <img src="assets/img/icons/css-3-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
+                </div>
+                <div class="p-2">
+                  <h6 id="type">Javascript</h6>
+                  <img src="assets/img/icons/js-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
                 </div>
               </div>
             </div>
