--- a/index.html
+++ b/index.html
@@ -51,16 +51,10 @@
           <h1 class="text-light"><a href="index.html">Chai Shao Yang</a></h1>
           <div class="social-links mt-3 text-center d-block d-lg-none">
             <a
-              href="https://twitter.com/SYChai271"
+              href="mailto:sychai271@gmail.com"
               target="_blank"
-              class="twitter"
-              ><i class="bx bxl-twitter"></i
-            ></a>
-            <a
-              href="https://www.facebook.com/SYChai271/"
-              target="_blank"
-              class="facebook"
-              ><i class="bx bxl-facebook"></i
+              class="email"
+              ><i class="bx bx-envelope"></i
             ></a>
             <a
               href="https://www.instagram.com/sy.chai_/"
@@ -239,35 +233,70 @@
 
           <div class="d-sm-flex align-items-center justify-content-center">
             <div class="col-lg-6 me-auto" id="icon" data-aos="fade-up">
-              <img src="assets/img/icons/undraw_firmware_re_fgdy (1).svg" class="img-fluid d-none d-lg-block" id="icon" alt="">
+              <img
+                src="assets/img/icons/undraw_firmware_re_fgdy (1).svg"
+                class="img-fluid d-none d-lg-block"
+                id="icon"
+                alt=""
+              />
             </div>
             <div class="d-flex flex-column align-items-center text-center">
               <div class="d-flex flex-row" data-aos="fade-up">
                 <div class="p-2">
                   <h6 id="type">Python</h6>
-                  <img src="assets/img/icons/python-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
+                  <img
+                    src="assets/img/icons/python-svgrepo-com.svg"
+                    id="skill"
+                    class="img-fluid"
+                    alt=""
+                  />
                 </div>
                 <div class="p-2">
                   <h6 id="type">Robotics</h6>
-                  <img src="assets/img/icons/robots-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
+                  <img
+                    src="assets/img/icons/robots-svgrepo-com.svg"
+                    id="skill"
+                    class="img-fluid"
+                    alt=""
+                  />
                 </div>
                 <div class="p-2">
                   <h6 id="type">Git</h6>
-                  <img src="assets/img/icons/git-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
+                  <img
+                    src="assets/img/icons/git-svgrepo-com.svg"
+                    id="skill"
+                    class="img-fluid"
+                    alt=""
+                  />
                 </div>
               </div>
               <div class="d-flex flex-row" data-aos="fade-up">
                 <div class="p-2">
                   <h6 id="type">HTML</h6>
-                  <img src="assets/img/icons/html-5-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
+                  <img
+                    src="assets/img/icons/html-5-svgrepo-com.svg"
+                    id="skill"
+                    class="img-fluid"
+                    alt=""
+                  />
                 </div>
                 <div class="p-2">
                   <h6 id="type">CSS</h6>
-                  <img src="assets/img/icons/css-3-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
+                  <img
+                    src="assets/img/icons/css-3-svgrepo-com.svg"
+                    id="skill"
+                    class="img-fluid"
+                    alt=""
+                  />
                 </div>
                 <div class="p-2">
                   <h6 id="type">Javascript</h6>
-                  <img src="assets/img/icons/js-svgrepo-com.svg" id="skill" class="img-fluid" alt="">
+                  <img
+                    src="assets/img/icons/js-svgrepo-com.svg"
+                    id="skill"
+                    class="img-fluid"
+                    alt=""
+                  />
                 </div>
               </div>
             </div>
@@ -569,16 +598,10 @@
         <div class="copyright">Made by Shao Yang</div>
         <div class="social-links mt-3 text-center d-none d-lg-block">
           <a
-            href="https://twitter.com/SYChai271"
+            href="mailto:sychai271@gmail.com"
             target="_blank"
-            class="twitter"
-            ><i class="bx bxl-twitter"></i
-          ></a>
-          <a
-            href="https://www.facebook.com/SYChai271/"
-            target="_blank"
-            class="facebook"
-            ><i class="bx bxl-facebook"></i
+            class="email"
+            ><i class="bx bx-envelope"></i
           ></a>
           <a
             href="https://www.instagram.com/sy.chai_/"
