changed icon on computer

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <div class="d-sm-flex align-items-center justify-content-center">
             <div class="col-lg-6 me-auto" id="icon" data-aos="fade-up">
               <img
-                src="assets/img/icons/undraw_firmware_re_fgdy (1).svg"
+                src="assets/img/icons/undraw_programming_re_kg9v.svg"
                 class="img-fluid d-none d-lg-block"
                 id="icon"
                 alt=""
