--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
           />
           <h1 class="text-light"><a href="index.html">Chai Shao Yang</a></h1>
           <div class="social-links mt-3 text-center d-block d-lg-none">
-            <a
-              href="mailto:sychai271@gmail.com"
-              target="_blank"
-              class="email"
+            <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
               ><i class="bx bx-envelope"></i
             ></a>
             <a
@@ -597,10 +594,7 @@
       <div class="container">
         <div class="copyright">Made by Shao Yang</div>
         <div class="social-links mt-3 text-center d-none d-lg-block">
-          <a
-            href="mailto:sychai271@gmail.com"
-            target="_blank"
-            class="email"
+          <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
             ><i class="bx bx-envelope"></i
           ></a>
           <a
