added presentation award

--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
                   <li>1st in Overall Championship</li>
                   <li>1st in Best Programming</li>
                   <li>2nd in Best Robot Performance</li>
+                  <li>2nd in Best Presentation</li>
                 </ul>
               </div>
 
