added descriptions for projects

--- a/index.html
+++ b/index.html
@@ -471,9 +471,30 @@
                     href="assets/img/portfolio/portfolio-1.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="App 1"
+                    data-glightbox="title: Chess App; description: .app-desc1"
+                    data-desc-position="right"
                     ><i class="bx bx-plus"></i
                   ></a>
+                  <div class="glightbox-desc app-desc1">
+                    <p>
+                      Chess is one of my favourite passtimes as it helps me
+                      develop my problem solving abilities as well as my
+                      critical thinking. This is why I decided that I wanted to
+                      make a replica of the board game from scratch using
+                      python. This was my first big project that I endeavoured
+                      on at that point in time so the prospect of building the
+                      entire app ground up seemed overwhelming to me initially.
+                      Indeed, it was no easy task and my abilities were pushed
+                      to their limit in order for me to figure out solutions to
+                      all sorts of bugs that had arised along the way. In
+                      hindsight, there were certain aspects of my code that
+                      could receive some cleaning up as well as a few bugs that
+                      needed to be taken care of, but for the most part, the
+                      game is functional and I was glad that I did not give up
+                      midway as this journey has been very rewarding and
+                      fruitful.
+                    </p>
+                  </div>
                   <a
                     href="https://github.com/SYChai271/chess"
                     target="_blank"
@@ -496,8 +517,28 @@
                     href="assets/img/portfolio/portfolio-2.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Web 3"
+                    data-glightbox="title: Avis Fashion; description: .web-desc1"
                     ><i class="bx bx-plus"></i
+                  ></a>
+                  <div class="glightbox-desc web-desc1">
+                    <p>
+                      This was my first web developemnet project after learning
+                      the fundamentals. This website was designed to showcase my
+                      groups's research and ideas for the 23rd Elementz Science
+                      Research Conference & Exhibition. In this project, I
+                      applied many concepts which I had learnt such as building
+                      a responsive layout using bootstrap, as well as learning
+                      how to style images via CSS. This experience has been very
+                      fulfilling as I was able to upgrade my web development
+                      skills while at the same time playing my part for the
+                      team.
+                    </p>
+                  </div>
+                  <a
+                    href="https://avisfashion.netlify.app"
+                    class="text-decoration-none"
+                    target="_blank"
+                    ><i class="bx bx-link-external"></i
                   ></a>
                   <a
                     href="https://github.com/SYChai271/avisfashion"
@@ -521,9 +562,37 @@
                     href="assets/img/portfolio/portfolio-3.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="robotics 2"
+                    data-glightbox="title: NRC 2021; description: .robotics-desc1"
+                    data-desc-position="right"
                     ><i class="bx bx-plus"></i
                   ></a>
+                  <div class="glightbox-desc robotics-desc1">
+                    <p>
+                      Due to the pandemic, I was unable to compete in any
+                      robotics competition in 2020, which makes this the first
+                      robotics competition I took part in. Although I had
+                      received training and had attempted numerous practices,
+                      none of which was able to be compared with the scale and
+                      difficulty of the WRO missions. Needless to say, I had
+                      made uncountable mistakes during the preparation for this
+                      competition mainly due to my inexperience. For instance,
+                      rather than taking my time and brainstorming plausible
+                      solutions, I jumped straight into it with my initial idea
+                      which I was optimistic about, but after several weeks of
+                      testing, I realised that my prototype was not going to cut
+                      it. It was difficult to go back to square one and start
+                      over but I understood that it was necessary in order for
+                      me to have any hopes of improving. This competition taught
+                      me the importance of perserverance; to have the urge to
+                      continue despite mutliple setbacks which I had faced when
+                      the robot was performing inconsistently. It was only after
+                      countless hours of hardwork did I managed to overcome
+                      these difficulties. In terms of skills, I learnt many new
+                      algorithms like PID line tracing, various search and sort
+                      algorithms and even implemented depth first search to find
+                      the shortest path.
+                    </p>
+                  </div>
                   <a
                     href="https://github.com/SYChai271/sy-wro2021"
                     target="_blank"
@@ -546,8 +615,27 @@
                     href="assets/img/portfolio/portfolio-4.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Web 2"
+                    data-glightbox="title: 30by30; description: .web-desc2"
                     ><i class="bx bx-plus"></i
+                  ></a>
+                  <div class="glightbox-desc web-desc2">
+                    <p>
+                      This was another website that I made to showcase our teams
+                      proposal for a platform to encourage citizens to indulge
+                      in home gardening, in hopes of attaining the 30by30 goal.
+                      Similar to the Avis Fashion website, this was also made
+                      using bootstrap and vanilla CSS. Additionally, I was able
+                      to include some javascript which I had learnt along the
+                      way to enhance the user experience of the website. This
+                      continued my interest for building websites and prompted
+                      me to learn more about back-end web development.
+                    </p>
+                  </div>
+                  <a
+                    href="https://30by30.netlify.app"
+                    class="text-decoration-none"
+                    target="_blank"
+                    ><i class="bx bx-link-external"></i
                   ></a>
                   <a
                     href="https://github.com/SYChai271/30by30"
@@ -571,9 +659,42 @@
                     href="assets/img/portfolio/portfolio-5.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="robotics 1"
+                    data-glightbox="title: NRC 2022; description: .robotics-desc2"
+                    data-desc-position="right"
                     ><i class="bx bx-plus"></i
                   ></a>
+                  <div class="glightbox-desc robotics-desc2">
+                    <p>
+                      The 2022 mission was radically different from that of
+                      2021. There were many more elements demanding greater
+                      expertise in the engineering of robot to enable to it
+                      cross obstacles and perform precise actions. Compared to
+                      the previous year, the tasks this year were more
+                      challenging in terms of building. Upon realising this, I
+                      could not help but feel slightly nervous as my building
+                      was not as well-rounded as my programming. Nonetheless, I
+                      felt that this was a good opportunity to step out of my
+                      comfort zone and try out something new and build
+                      innovative mechanisms and experiment with different robot
+                      bases. Designing a good robot is a multifaceted process
+                      that requires understanding in various physics topics such
+                      as centre of gravity as well as the principles of moments
+                      to enable the robot to perform the tasks with ease, which
+                      I felt that I had accomplished. In terms of programming, I
+                      was able to design an algorithm to allow the robot to
+                      sense objects accurately while moving at high speeds to
+                      save time. This led me employ statstics functions like
+                      mean and median as well as standard deviation to calculate
+                      the optimal sensor reading for evaluation to yield the
+                      most reliable results. Furthermore, there were other
+                      creative ideas I tried such as using the PID algorithm to
+                      control the distance of the robot from the wall rather
+                      than for line tracing as there was a lack of lines on the
+                      playing field. This method turned out to be very feasible
+                      as it was efficacious in maintaining the consistency and
+                      positioning of the robot.
+                    </p>
+                  </div>
                   <a
                     href="https://github.com/SYChai271/sy-wro2022"
                     target="_blank"
