--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Shao Yang's Portfolio</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
 
     <link href="assets/img/icon.png" rel="icon" />
     <link href="assets/img/icon.png" rel="apple-touch-icon" />
