added zoom to skills images

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                   <img
                     src="assets/img/icons/python-svgrepo-com.svg"
                     id="skill"
-                    class="img-fluid"
+                    class="img-fluid zoom"
                     alt=""
                   />
                 </div>
@@ -250,7 +250,7 @@
                   <img
                     src="assets/img/icons/robots-svgrepo-com.svg"
                     id="skill"
-                    class="img-fluid"
+                    class="img-fluid zoom"
                     alt=""
                   />
                 </div>
@@ -259,7 +259,7 @@
                   <img
                     src="assets/img/icons/git-svgrepo-com.svg"
                     id="skill"
-                    class="img-fluid"
+                    class="img-fluid zoom"
                     alt=""
                   />
                 </div>
@@ -270,7 +270,7 @@
                   <img
                     src="assets/img/icons/html-5-svgrepo-com.svg"
                     id="skill"
-                    class="img-fluid"
+                    class="img-fluid zoom"
                     alt=""
                   />
                 </div>
@@ -279,7 +279,7 @@
                   <img
                     src="assets/img/icons/css-3-svgrepo-com.svg"
                     id="skill"
-                    class="img-fluid"
+                    class="img-fluid zoom"
                     alt=""
                   />
                 </div>
@@ -288,7 +288,7 @@
                   <img
                     src="assets/img/icons/js-svgrepo-com.svg"
                     id="skill"
-                    class="img-fluid"
+                    class="img-fluid zoom"
                     alt=""
                   />
                 </div>
