added chess video

--- a/index.html
+++ b/index.html
@@ -473,7 +473,10 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <div class="glightbox-desc app-desc1">
-                    <p>
+                    <video class="d-none d-lg-block" width="240" height="180" controls>
+                      <source src="assets/img/videos/chess.mp4" type="video/mp4">
+                    </video>
+                    <p class="mt-3">
                       Chess is one of my favourite passtimes as it helps me
                       develop my problem solving abilities as well as my
                       critical thinking. This is why I decided that I wanted to
