--- a/index.html
+++ b/index.html
@@ -225,16 +225,16 @@
             </p>
           </div>
 
-          <div class="d-sm-flex align-items-center justify-content-center">
-            <div class="col-lg-6 me-auto" id="icon" data-aos="fade-up">
+          <div class="d-flex align-items-center justify-content-center row">
+            <div class="col-md-6" id="icon" data-aos="fade-up">
               <img
                 src="assets/img/icons/undraw_programming_re_kg9v.svg"
-                class="img-fluid d-none d-lg-block"
+                class="img-fluid"
                 id="icon"
                 alt=""
               />
             </div>
-            <div class="d-flex flex-column align-items-center text-center">
+            <div class="d-flex flex-column align-items-center text-center col-md-6">
               <div class="d-flex flex-row" data-aos="fade-up">
                 <div class="p-2">
                   <h6 id="type">Python</h6>
