--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
                 alt=""
               />
             </div>
-            <div class="d-flex flex-column align-items-center text-center col-md-6">
+            <div
+              class="d-flex flex-column align-items-center text-center col-md-6"
+            >
               <div class="d-flex flex-row" data-aos="fade-up">
                 <div class="p-2">
                   <h6 id="type">Python</h6>
@@ -473,8 +475,16 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <div class="glightbox-desc app-desc1">
-                    <video class="d-none d-lg-block" width="240" height="180" controls>
-                      <source src="assets/img/videos/chess.mp4" type="video/mp4">
+                    <video
+                      class="d-none d-lg-block"
+                      width="240"
+                      height="180"
+                      controls
+                    >
+                      <source
+                        src="assets/img/videos/chess.mp4"
+                        type="video/mp4"
+                      />
                     </video>
                     <p class="mt-3">
                       Chess is one of my favourite passtimes as it helps me
@@ -567,8 +577,16 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <div class="glightbox-desc robotics-desc1">
-                    <video class="d-none d-lg-block" width="240" height="180" controls>
-                      <source src="assets/img/videos/IMG_5516.MOV" type="video/mp4">
+                    <video
+                      class="d-none d-lg-block"
+                      width="240"
+                      height="180"
+                      controls
+                    >
+                      <source
+                        src="assets/img/videos/IMG_5516.MOV"
+                        type="video/mp4"
+                      />
                     </video>
                     <p class="mt-3">
                       Due to the pandemic, I was unable to compete in any
@@ -667,8 +685,16 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <div class="glightbox-desc robotics-desc2">
-                    <video class="d-none d-lg-block" width="240" height="180" controls>
-                      <source src="assets/img/videos/IMG_5517.MOV" type="video/mp4">
+                    <video
+                      class="d-none d-lg-block"
+                      width="240"
+                      height="180"
+                      controls
+                    >
+                      <source
+                        src="assets/img/videos/IMG_5517.MOV"
+                        type="video/mp4"
+                      />
                     </video>
                     <p class="mt-3">
                       The 2022 mission was radically different from that of
