--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-4 d-none d-lg-block" data-aos="fade-right">
+            <div class="col-md-4" data-aos="fade-right">
               <img src="assets/img/profile-img.png" class="img-fluid" alt="" />
             </div>
-            <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+            <div class="col-md-8 pt-4 pt-sm-0 content" data-aos="fade-left">
               <h3>Profile</h3>
               <p class="fst-italic">
                 Currently, I'm a secondary 4 student in Fuhua Secondary School.
